clapi_macros/test_suite/tests/ui/fail/misplace_attribute/command_in_struct.rs
use clapi::macros::*;

#[command]
struct MyStruct;

fn main(){}